@@ -1,6 +1,6 @@
 Package: R2jags
-Version: 0.03-03
-Date: 2012-1-22
+Version: 0.03-04
+Date: 2012-1-25
 Title: A Package for Running jags from R
 Author: Yu-Sung Su <suyusung@tsinghua.edu.cn>, 
         Masanao Yajima <yajima@stat.columbia.edu>,
